--- a/gcfd5ty/src/book/Main.fxml
+++ b/gcfd5ty/src/book/Main.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -10,7 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="400.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="book.MainController">
+<AnchorPane prefHeight="400.0" prefWidth="660.0" style="-fx-background-color: #f5f6fa;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="book.MainController">
    <BorderPane prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <left>
          <HBox prefHeight="400.0" prefWidth="243.0" BorderPane.alignment="CENTER">
@@ -35,8 +36,11 @@
                   <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="22.0" prefWidth="70.0" text="Pages" textAlignment="CENTER" />
                   <TextField fx:id="tfPages" prefHeight="32.0" prefWidth="152.0" />
                </HBox>
-               <HBox alignment="BOTTOM_CENTER" prefHeight="53.0" prefWidth="243.0">
-                  <Button fx:id="btnInsert" mnemonicParsing="false" onAction="#MainController" prefHeight="32.0" prefWidth="90.0" text="Insert" />
+               <HBox alignment="BOTTOM_CENTER" prefHeight="53.0" prefWidth="243.0" stylesheets="@style.css">
+                  <Button fx:id="btnInsert" mnemonicParsing="false" onAction="#MainController" prefHeight="32.0" prefWidth="90.0" styleClass="button-86" text="Insert">
+                     <HBox.margin>
+                        <Insets right="30.0" />
+                     </HBox.margin></Button>
                   <Button fx:id="btnUpdate" mnemonicParsing="false" onAction="#MainController" prefHeight="32.0" prefWidth="90.0" text="Update" />
                </HBox>
                <HBox alignment="CENTER" layoutX="10.0" layoutY="242.0" prefHeight="51.0" prefWidth="243.0">
