--- a/zdojmc/src/main/resources/Styles/Login.css
+++ b/zdojmc/src/main/resources/Styles/Login.css
@@ -7,6 +7,8 @@
 .login_logo_container Label {
     -fx-font-size: 1.5em;
     -fx-text-fill: #FFFFFF;
+    -fx-font-weight: bold;
+    -fx-alignment: center;
 }
 
 /**/
