--- a/zdojmc/src/main/resources/Fxml/Admin/Admin.fxml
+++ b/zdojmc/src/main/resources/Fxml/Admin/Admin.fxml
@@ -1,19 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
 <BorderPane fx:id="admin_parent" xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            prefHeight="400.0" prefWidth="600.0">
+            xmlns:fx="http://javafx.com/fxml">
     <left>
-        <fx:include source="AdminMenu.fxml"/>
+        <fx:include source="/main/resources/Fxml/Admin/AdminMenu.fxml"/>
     </left>
     <center>
-        <fx:include source="CreateClient.fxml"/>
+        <fx:include source="/main/resources/Fxml/Admin/CreateClient.fxml"/>
     </center>
 
 </BorderPane>
