--- a/zdojmc/src/main/resources/Fxml/Login.fxml
+++ b/zdojmc/src/main/resources/Fxml/Login.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.SVGPath?>
 
+<?import javafx.scene.control.PasswordField?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../Styles/Login.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.Controllers.LoginController">
    <BorderPane layoutX="186.0" layoutY="118.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <left>
@@ -26,7 +27,7 @@
             <Label fx:id="payee_address_llb" text="Payee Address:" />
             <TextField fx:id="payee_address_fid" styleClass="input_field" />
             <Label layoutX="10.0" layoutY="64.0" text="Password:" />
-            <TextField fx:id="password_fid" layoutX="10.0" layoutY="87.0" styleClass="input_field" />
+            <PasswordField fx:id="password_fid" layoutX="10.0" layoutY="87.0" styleClass="input_field" />
             <Button fx:id="login_btn" mnemonicParsing="false" text="Login" />
             <Label fx:id="error_lbl" styleClass="error_lbl" text="Error" />
          </VBox>
