--- a/lkjgasngo/resources/Fxml/GUI11.fxml
+++ b/lkjgasngo/resources/Fxml/GUI11.fxml
@@ -3,6 +3,9 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
@@ -40,25 +43,31 @@
    </HBox>
    <VBox alignment="TOP_RIGHT" layoutX="40.0" layoutY="60.0" prefHeight="210.0" prefWidth="840.0" styleClass="container1" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
       <HBox alignment="CENTER" prefHeight="45.0" prefWidth="778.0">
-         <Label style="-fx-font-size: 3em;" styleClass="it_lbl" text="IT" textFill="#c23616">
+         <Label fx:id="it_lbl" style="-fx-font-size: 3em;" styleClass="it_lbl" text="IT" textFill="#c23616">
             <HBox.margin>
                <Insets />
             </HBox.margin>
          </Label>
-         <Region prefHeight="52.0" prefWidth="656.0" HBox.hgrow="ALWAYS" />
-         <Button fx:id="gear_btn" alignment="CENTER" mnemonicParsing="false" prefHeight="33.0" prefWidth="0.0" style="-fx-background-color: #FFFFFF;">
+         <Region prefHeight="52.0" prefWidth="379.0" HBox.hgrow="ALWAYS" />
+         <MenuButton mnemonicParsing="false" prefHeight="43.0" prefWidth="41.0" style="-fx-background-color: #FFFFFF;">
+           <items>
+             <MenuItem mnemonicParsing="false" text="Question Bank" />
+               <SeparatorMenuItem mnemonicParsing="false" />
+               <MenuItem fx:id="questions_btn" mnemonicParsing="false" text="Questions" />
+             <MenuItem mnemonicParsing="false" text="Categories" />
+               <MenuItem mnemonicParsing="false" text="Import" />
+               <MenuItem mnemonicParsing="false" text="Export" />
+           </items>
             <graphic>
-               <VBox accessibleRole="BUTTON" alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="5.0" prefWidth="14.0">
-                  <SVGPath content="M495.9 166.6c3.2 8.7 .5 18.4-6.4 24.6l-43.3 39.4c1.1 8.3 1.7 16.8 1.7 25.4s-.6 17.1-1.7 25.4l43.3 39.4c6.9 6.2 9.6 15.9 6.4 24.6c-4.4 11.9-9.7 23.3-15.8 34.3l-4.7 8.1c-6.6 11-14 21.4-22.1 31.2c-5.9 7.2-15.7 9.6-24.5 6.8l-55.7-17.7c-13.4 10.3-28.2 18.9-44 25.4l-12.5 57.1c-2 9.1-9 16.3-18.2 17.8c-13.8 2.3-28 3.5-42.5 3.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-12.5-57.1c-15.8-6.5-30.6-15.1-44-25.4L83.1 425.9c-8.8 2.8-18.6 .3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4 6.4-24.6l43.3-39.4C64.6 273.1 64 264.6 64 256s.6-17.1 1.7-25.4L22.4 191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9 9.7-23.3 15.8-34.3l4.7-8.1c6.6-11 14-21.4 22.1-31.2c5.9-7.2 15.7-9.6 24.5-6.8l55.7 17.7c13.4-10.3 28.2-18.9 44-25.4l12.5-57.1c2-9.1 9-16.3 18.2-17.8C227.3 1.2 241.5 0 256 0s28.7 1.2 42.5 3.5c9.2 1.5 16.2 8.7 18.2 17.8l12.5 57.1c15.8 6.5 30.6 15.1 44 25.4l55.7-17.7c8.8-2.8 18.6-.3 24.5 6.8c8.1 9.8 15.5 20.2 22.1 31.2l4.7 8.1c6.1 11 11.4 22.4 15.8 34.3zM256 336a80 80 0 1 0 0-160 80 80 0 1 0 0 160z" fill="#192a56" scaleX="0.05" scaleY="0.05" />
-               </VBox>
+               <Button alignment="CENTER" mnemonicParsing="false" prefHeight="33.0" prefWidth="0.0" style="-fx-background-color: #FFFFFF;">
+                  <graphic>
+                     <VBox accessibleRole="BUTTON" alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="5.0" prefWidth="14.0">
+                        <SVGPath content="M495.9 166.6c3.2 8.7 .5 18.4-6.4 24.6l-43.3 39.4c1.1 8.3 1.7 16.8 1.7 25.4s-.6 17.1-1.7 25.4l43.3 39.4c6.9 6.2 9.6 15.9 6.4 24.6c-4.4 11.9-9.7 23.3-15.8 34.3l-4.7 8.1c-6.6 11-14 21.4-22.1 31.2c-5.9 7.2-15.7 9.6-24.5 6.8l-55.7-17.7c-13.4 10.3-28.2 18.9-44 25.4l-12.5 57.1c-2 9.1-9 16.3-18.2 17.8c-13.8 2.3-28 3.5-42.5 3.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-12.5-57.1c-15.8-6.5-30.6-15.1-44-25.4L83.1 425.9c-8.8 2.8-18.6 .3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4 6.4-24.6l43.3-39.4C64.6 273.1 64 264.6 64 256s.6-17.1 1.7-25.4L22.4 191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9 9.7-23.3 15.8-34.3l4.7-8.1c6.6-11 14-21.4 22.1-31.2c5.9-7.2 15.7-9.6 24.5-6.8l55.7 17.7c13.4-10.3 28.2-18.9 44-25.4l12.5-57.1c2-9.1 9-16.3 18.2-17.8C227.3 1.2 241.5 0 256 0s28.7 1.2 42.5 3.5c9.2 1.5 16.2 8.7 18.2 17.8l12.5 57.1c15.8 6.5 30.6 15.1 44 25.4l55.7-17.7c8.8-2.8 18.6-.3 24.5 6.8c8.1 9.8 15.5 20.2 22.1 31.2l4.7 8.1c6.1 11 11.4 22.4 15.8 34.3zM256 336a80 80 0 1 0 0-160 80 80 0 1 0 0 160z" fill="#192a56" scaleX="0.05" scaleY="0.05" />
+                     </VBox>
+                  </graphic>
+               </Button>
             </graphic>
-         </Button>
-         <VBox alignment="CENTER" layoutX="22.0" layoutY="10.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="52.0" prefWidth="20.0">
-            <HBox.margin>
-               <Insets />
-            </HBox.margin>
-            <SVGPath content="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z" fill="#c23616" scaleX="0.03" scaleY="0.03" />
-         </VBox>
+         </MenuButton>
       </HBox>
       <HBox alignment="CENTER_LEFT" prefHeight="24.0" prefWidth="778.0">
          <Label text="Home" textFill="#c23616">
