--- a/lkjgasngo/src/resources/Fxml/GUI32.fxml
+++ b/lkjgasngo/src/resources/Fxml/GUI32.fxml
@@ -2,8 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
@@ -66,26 +65,27 @@
                 </HBox.margin>
             </Text>
             <Label layoutX="77.0" layoutY="10.0" text="THI CUỐI KÌ" textFill="#c23616" />
+         <Text layoutX="177.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="/">
+            <HBox.margin>
+               <Insets left="10.0" right="10.0" />
+            </HBox.margin>
+         </Text>
+         <Label layoutX="195.0" layoutY="10.0" text="Question Bank" textFill="#c23616" />
+         <Text layoutX="285.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="/">
+            <HBox.margin>
+               <Insets left="10.0" right="10.0" />
+            </HBox.margin>
+         </Text>
+         <Label layoutX="292.0" layoutY="10.0" text="Question" textFill="#c23616" />
+         <Text layoutX="383.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="/">
+            <HBox.margin>
+               <Insets left="10.0" right="10.0" />
+            </HBox.margin>
+         </Text>
+         <Label layoutX="390.0" layoutY="10.0" text="Editing" />
         </HBox>
     </VBox>
-    <TabPane layoutX="31.0" layoutY="234.0" prefHeight="440.0" prefWidth="840.0" styleClass="container1" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="26.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="234.0">
-        <Tab text="Questions">
-            <fx:include source="GUI21questionTab.fxml" />
-        </Tab>
-        <Tab text="Categories">
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-        </Tab>
-        <Tab text="Import">
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-        </Tab>
-        <Tab text="Export">
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-        </Tab>
-        <Tab closable="false">
-            <graphic>
-                <Region prefHeight="26.0" prefWidth="274.0" />
-            </graphic>
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-        </Tab>
-    </TabPane>
+   <ScrollPane layoutX="30.0" layoutY="238.0" prefHeight="440.0" prefWidth="840.0" AnchorPane.bottomAnchor="26.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="234.0">
+        <fx:include source="GUI32pane.fxml" />
+   </ScrollPane>
 </AnchorPane>
